# quickfix-rs

./: .gitmodules  Cargo.toml
quickfix/: Cargo.toml  README.md
quickfix-ffi/: Cargo.toml  README.md  build.rs
quickfix-ffi/examples/: demo_basic_binding.c  demo_basic_ffi.rs
quickfix-ffi/quickfix-bind/include/: quickfix_bind.h
quickfix-ffi/quickfix-bind/src/: quickfix_bind.cpp
quickfix-ffi/scripts/: apply_bolt.sh  build_with_sample_pgo.sh
quickfix-ffi/src/: lib.rs
quickfix-msg-gen/src/: lib.rs
quickfix-msg40/tests/: test_usage.rs
quickfix-msgkrx/: Cargo.toml  README.md  build.rs
quickfix-msgkrx/src/: FIX44KRX.xml
quickfix-native/: Cargo.toml
quickfix/benches/: field_compare.rs
quickfix/examples/: demo_config.rs  fix_getting_started.rs
quickfix/examples/fix_repl/: fix_app.rs  main.rs
quickfix/src/: acceptor.rs  application.rs  data_dictionary.rs  dictionary.rs  dictionary_item.rs  group.rs  header.rs  initiator.rs  lib.rs  log_factory.rs  message.rs  session.rs  session_id.rs  session_settings.rs  trailer.rs
quickfix/tests/: test_dictionary_item.rs  test_field_map.rs  test_fix_string_bench.rs  test_log_factory.rs  test_messages.rs  test_send_receive.rs  test_send_to_target_bench.rs  test_session.rs  test_socket.rs
quickfix/tests/utils/: checker.rs  recorder.rs
