[package]
name = "quickfix"
version = "0.2.0"
authors = ["Arthur LE MOIGNE"]
edition = "2021"
description = "High level binding to quickfix C++ library"
repository = "https://github.com/arthurlm/quickfix-rs"
license = "MIT OR Apache-1.1"
keywords = ["quickfix", "fix-protocol", "finance"]
categories = ["api-bindings", "finance"]
rust-version = "1.70.0"

[dependencies]
quickfix-ffi = { path = "../quickfix-ffi", version = "0.2.0" }
thiserror = "2.0.11"
log = { version = "0.4.22", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["log"]
build-with-ssl = ["quickfix-ffi/build-with-ssl"]
build-with-mysql = ["quickfix-ffi/build-with-mysql"]
build-with-postgres = ["quickfix-ffi/build-with-postgres"]
build-with-io-uring = ["quickfix-ffi/build-with-io-uring"]
log = ["dep:log"]

[[bench]]
name = "field_compare"
harness = false
